mst_prim am Ende korrekt andrucken

--- a/notebook/mst.ipynb
+++ b/notebook/mst.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
     "nx.draw_networkx_edge_labels(G,pos,  edge_labels={(u, v): f\"{data['weight']}\" for u, v, data in G.edges(data=True)})\n",
     "\n",
     "# Zeichne die MST-Kanten fett und in einer anderen Farbe\n",
-    "nx.draw_networkx_edges(mst, pos, edge_color=\"red\", width=2.5)\n",
+    "nx.draw_networkx_edges(mst_prim, pos, edge_color=\"red\", width=2.5)\n",
     "\n",
     "plt.show()"
    ]
