add floyd warshall

--- a/notebook/dijkstra.ipynb
+++ b/notebook/dijkstra.ipynb
@@ -2,22 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "graph_edge_list = '''\n",
-    "    1 2 3\n",
-    "    1 3 2\n",
-    "    2 4 2\n",
-    "    2 5 3\n",
-    "    3 4 5\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -32,41 +17,12 @@
     }
    ],
    "source": [
-    "import networkx as nx\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "G = nx.DiGraph()\n",
-    "\n",
-    "for line in graph_edge_list.split('\\n'):\n",
-    "    if line:\n",
-    "        u, v, weight = line.split()\n",
-    "        G.add_edge(u, v, weight=int(weight))\n",
-    "        G.add_edge(v, u, weight=int(weight))\n",
-    "\n",
-    "pos = nx.spring_layout(G, seed=7)  # positions for all nodes - seed for reproducibility\n",
-    "\n",
-    "# nodes\n",
-    "nx.draw_networkx_nodes(G, pos, node_size=700)\n",
-    "\n",
-    "# edges\n",
-    "nx.draw_networkx_edges(G, pos, edgelist=G.edges(), width=6)\n",
-    "\n",
-    "# node labels\n",
-    "nx.draw_networkx_labels(G, pos, font_size=20, font_family=\"sans-serif\")\n",
-    "# edge weight labels\n",
-    "edge_labels = nx.get_edge_attributes(G, \"weight\")\n",
-    "nx.draw_networkx_edge_labels(G, pos, edge_labels)\n",
-    "\n",
-    "ax = plt.gca()\n",
-    "ax.margins(0.08)\n",
-    "plt.axis(\"off\")\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
+    "%run ./base.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +94,8 @@
     }
    ],
    "source": [
-    "# Start Node\n",
+    "# Visualisierung\n",
+    "# Markiere den Startknoten in rot\n",
     "nx.draw_networkx_nodes(G, pos)\n",
     "nx.draw_networkx_nodes(G, pos, nodelist=[start], node_color=\"tab:red\")\n",
     "\n",
