--- a/notebook/mst.ipynb
+++ b/notebook/mst.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,10 +55,10 @@
     "\n",
     "    # Kanten des Graphen nach Gewicht sortieren\n",
     "    sorted_edges = sorted(graph.edges(data=True), key=lambda x: x[2]['weight'])\n",
-    "    \n",
+    "\n",
     "    # Initialisiere eine Union-Find-Struktur\n",
     "    uf = {node: node for node in graph.nodes}\n",
-    "    \n",
+    "\n",
     "    def find(node):\n",
     "        # Finde das Set, zu dem der Knoten gehört\n",
     "        if uf[node] != node:\n",
@@ -71,7 +71,7 @@
     "        root2 = find(node2)\n",
     "        if root1 != root2:\n",
     "            uf[root2] = root1\n",
-    "    \n",
+    "\n",
     "    # Durchlaufe die sortierten Kanten und füge sie dem MST hinzu\n",
     "    for u, v, data in sorted_edges:\n",
     "        if find(u) != find(v):  # Vermeidung von Zyklen\n",
@@ -232,7 +232,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -246,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
