add manual mode

--- a/notebook/base.ipynb
+++ b/notebook/base.ipynb
@@ -9,10 +9,10 @@
     "graph_edge_list = '''\n",
     "    1 2 3\n",
     "    1 3 2\n",
-    "    2 4 2\n",
-    "    2 5 3\n",
-    "    3 4 5\n",
-    "    3 6 6\n",
+    "    2 4 5\n",
+    "    2 5 6\n",
+    "    3 4 2\n",
+    "    3 6 3\n",
     "    4 7 1\n",
     "    4 6 4\n",
     "    5 7 2\n",
@@ -61,6 +61,20 @@
     "        self.pos = nx.spring_layout(graph, seed=seed)\n",
     "        self.node_colors = {node: \"lightblue\" for node in graph.nodes()}\n",
     "        self.edge_colors = {edge: \"black\" for edge in graph.edges()}\n",
+    "        self.manual_mode = False\n",
+    "\n",
+    "    def enable_manual_mode(self):\n",
+    "        \"\"\"\n",
+    "        Enables manual mode to allow batching of color changes.\n",
+    "        \"\"\"\n",
+    "        self.manual_mode = True\n",
+    "\n",
+    "    def disable_manual_mode(self):\n",
+    "        \"\"\"\n",
+    "        Disables manual mode and redraws the graph to reflect all changes.\n",
+    "        \"\"\"\n",
+    "        self.manual_mode = False\n",
+    "        self.draw_graph()\n",
     "\n",
     "    def draw_graph(self):\n",
     "        \"\"\"\n",
@@ -95,15 +109,23 @@
     "        \"\"\"\n",
     "        if node in self.graph.nodes():\n",
     "            self.node_colors[node] = color\n",
-    "        self.draw_graph()\n",
+    "\n",
+    "        if not self.manual_mode:\n",
+    "            self.draw_graph()\n",
     "\n",
     "    def color_edge(self, edge, color=\"red\"):\n",
     "        \"\"\"\n",
     "        Updates the color of a specific edge and redraws the graph.\n",
     "        \"\"\"\n",
     "        if edge in self.graph.edges() or (edge[1], edge[0]) in self.graph.edges():\n",
+    "            # if color is default reset to black\n",
+    "            if color == \"default\":\n",
+    "                color = \"black\"\n",
+    "\n",
     "            self.edge_colors[edge] = color\n",
-    "        self.draw_graph()\n",
+    "\n",
+    "        if not self.manual_mode:\n",
+    "            self.draw_graph()\n",
     "\n",
     "# Initialize the visualizer\n",
     "visualizer = GraphVisualizer(G, edge_label_attr=\"weight\", seed=53)\n",
