add possibility to visualize floyd warshall

--- a/notebook/base.ipynb
+++ b/notebook/base.ipynb
@@ -103,6 +103,16 @@
     "\n",
     "        plt.pause(0.1)  # Pause to update the plot dynamically\n",
     "\n",
+    "    def reset_colors(self):\n",
+    "        \"\"\"\n",
+    "        Resets all node and edge colors to their default values.\n",
+    "        \"\"\"\n",
+    "        self.node_colors = {node: \"lightblue\" for node in self.graph.nodes()}\n",
+    "        self.edge_colors = {edge: \"black\" for edge in self.graph.edges()}\n",
+    "\n",
+    "        if not self.manual_mode:\n",
+    "            self.draw_graph()\n",
+    "\n",
     "    def color_node(self, node, color=\"red\"):\n",
     "        \"\"\"\n",
     "        Updates the color of a specific node and redraws the graph.\n",
