--- a/notebook/floyd-warshall.ipynb
+++ b/notebook/floyd-warshall.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
     "import numpy as np\n",
     "\n",
     "# Floyd-Warshall algorithm\n",
-    "def floyd_warshall(graph):\n",
+    "def floyd_warshall(graph, visualize=False):\n",
     "    node_count_padded = len(graph) + 1\n",
     "\n",
     "    # Initialize the distance and predecessor matrices add one column and row so the node identifier match the matrix indices\n",
@@ -68,12 +68,29 @@
     "        dist[u][u] = 0\n",
     "        prev[u] = u\n",
     "\n",
-    "    for k in graph.nodes():\n",
-    "        for i in graph.nodes():\n",
-    "            for j in graph.nodes():\n",
-    "                if dist[i][j] > dist[i][k] + dist[k][j]:\n",
-    "                    dist[i][j] = dist[i][k] + dist[k][j]\n",
-    "                    prev[i][j] = prev[k][j]\n",
+    "    if visualize:\n",
+    "        visualizer.enable_manual_mode()\n",
+    "\n",
+    "    # The main loop\n",
+    "    # Try to find a shorter path between start and end node by going through the via node\n",
+    "    for via_node in graph.nodes():\n",
+    "        for start in graph.nodes():\n",
+    "            for end in graph.nodes():\n",
+    "                if visualize:\n",
+    "                    visualizer.color_node(start, \"red\")\n",
+    "                    visualizer.color_node(end, \"green\")\n",
+    "                    visualizer.color_node(via_node, \"yellow\")\n",
+    "                    visualizer.draw_graph()\n",
+    "\n",
+    "                if dist[start][end] > dist[start][via_node] + dist[via_node][end]:\n",
+    "                    dist[start][end] = dist[start][via_node] + dist[via_node][end]\n",
+    "                    prev[start][end] = prev[via_node][end]\n",
+    "\n",
+    "                if visualize:\n",
+    "                    visualizer.reset_colors()\n",
+    "\n",
+    "    if visualize:\n",
+    "        visualizer.disable_manual_mode()\n",
     "\n",
     "    return (dist, prev)\n",
     "\n",
@@ -89,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
